--- a/main.css
+++ b/main.css
@@ -50,12 +50,14 @@ header{
     border-radius: 50%;
     box-shadow: black 10px 5px 35px ;
 }
+
 .card-body{
     display: block;
     text-align: center;
 }
 .card-text{
-    font-size: 17px;
+    font-size: 20px;
+    height: 80px;
 } 
 .textPediTuTurno{
     text-align: center;
@@ -77,6 +79,7 @@ header{
 /*FOOTER*/
 footer{
     background-color: rgb(198, 168, 200);
+    max-width: auto;
     position: absolute;
     bottom: 0;
 }
@@ -84,7 +87,10 @@ footer{
     text-align: center;
     font-weight: bold;
     letter-spacing: 1px;
-
+}
+.anmat{
+    color: black;
+    text-decoration:underline;
 }
 .padreListaFooter{
     display: flex;
